fix type error of color

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <font clor="red">Hi world!
+        <font color="red">Hi, world in red!
         </font>
     </body>
 </html>
